# panoramic_optical_flow

./: .gitignore  README.md
code/: README.md
code/blender/: erp_cube.blend  icosohedren.blend  readme.md  render_traj_camera_csv.blend  render_traj_camera_csv.blend.py  tangent_image.blend
code/cpp/: CMakeLists.txt  data_format_conversion.cpp
code/cpp/replica360/: CMakeLists.txt  readme.md  render_cubemap.cpp  render_dataset_mp.cpp  turbo_colormap.hpp  viewer_panoramic.cpp
code/python/: README.md  compare_dis.py  compare_flownet2.py  compare_pwc_net.py  compare_raft.py  compare_summary.py  flow_evaluate.py  flow_method_evaluate.py  flow_vis.py  flowio.py  main.py  omniphoto.py  opticalflow_debug.py  render_queue.sh  replica360_test.py  requirements.txt  setup.py  tangent_image.py  test_utility.py
code/python/compare/: compare_dis.py  compare_flownet2.py  compare_omniflownet.py  compare_pwc_net.py  compare_raft.py  compare_raft_bmvc2021.py  compare_sum_replica360.py  compare_summary.py  configuration.py  readme.md
code/python/replica360/: config.sample.json  configuration.py  create_rendering_pose.py  cubemap2erp.py  gen_video_path_mp.py  omniphoto_post_process.py  omniphoto_render_queue.py  panodepthmap_render_queue.py  panoof_render_queue.py  post_process.py  readme.md  render_queue.py
code/python/src/: datasets_utility.py  depth_io.py  draft_figure.py  flow_estimate.py  flow_evaluate.py  flow_io.py  flow_postproc.py  flow_vis.py  flow_warp.py  fs_utility.py  gnomonic_projection.py  image_evaluate.py  image_io.py  image_utility.py  logger.py  pointcloud_utils.py  polygon.py  projection.py  projection_cubemap.py  projection_icosahedron.py  spherical_coordinates.py  visualization.py
code/python/src/panoopticalflow/: depth_io.py  draft_figure.py  flow_estimate.py  flow_evaluate.py  flow_io.py  flow_postproc.py  flow_vis.py  flow_warp.py  fs_utility.py  gnomonic_projection.py  image_evaluate.py  image_io.py  image_utility.py  mocker_data_generator.py  pointcloud_utils.py  polygon.py  projection.py  projection_cubemap.py  projection_icosahedron.py  spherical_coordinates.py  visualization.py
code/python/test/: configuration.py  main.py  opticalflow_debug.py  replica360_test.py  test_cubemap_proj.py  test_cubemap_proj_blend.py  test_depth_io.py  test_flow_estimate.py  test_flow_evaluate.py  test_flow_post_proc.py  test_flow_vis.py  test_flow_warp.py  test_gnomonic_projection.py  test_icosahedron_proj.py  test_image_utility.py  test_logger.py  test_mocker_data_generator.py  test_pointcloud_utils.py  test_polygon.py  test_projection.py  test_replica_util.py  test_spherical_coordinates.py  test_utility.py  test_utility_flow.py
code/python/tests/: configuration.py  test_cubemap_proj.py  test_depth_io.py  test_draft_figure.py  test_flow_estimate.py  test_flow_evaluate.py  test_flow_post_proc.py  test_flow_vis.py  test_flow_warp.py  test_gnomonic_projection.py  test_icosahedron_proj.py  test_image_utility.py  test_logger.py  test_mocker_data_generator.py  test_pointcloud_utils.py  test_polygon.py  test_projection.py  test_replica_util.py  test_spherical_coordinates.py  test_utility.py  test_utility_flow.py  test_visualization.py
code/python/utility/: __init__.py  depth_estimation.py  depth_io.py  draft_figure.py  flow_estimate.py  flow_evaluate.py  flow_io.py  flow_post_proc.py  flow_postproc.py  flow_vis.py  flow_warp.py  fs_utility.py  gnomonic_projection.py  icosahedron.py  image_evaluate.py  image_io.py  image_utility.py  logger.py  mocker_data_generator.py  nfov.py  pointcloud_utils.py  polygon.py  projection.py  projection_cubemap.py  projection_icosahedron.py  projection_icosahedron_3d.py  replica_util.py  spherical_coordinates.py  tangent_image.py  visualization.py
code/shell/: pwcnet_batch.sh
data/: README.md
data/replica_360/hotel_0/: 0002_opticalflow_backward.flo
data/replica_360_hotel_0/: 0001_opticalflow_forward.flo
doc/: README.md  bmvc_2021_arXiv_clearn.sh  optical_flow_evaluation.md  optical_flow_ground_truth.md  paper_plan.xlsx  readme.md
doc/draft/: bibliography.bib  main.tex  relativeworks.tex
doc/draft/images/synthetic_optical_flow/: svg2pdf.sh
doc/draft/sections/: applications.tex  approach.tex  experiments.tex  introduction.tex  relatedworks.tex
doc/images/: methods_error_maps.xcf
doc/paper_draft/: .gitignore  360flow.bib  3dv.sty  bmvc_review.tex  egbib.bib  egpaper_for_review.tex  supplementary.tex
doc/paper_draft/images/: .gitignore
doc/paper_draft/images/tangent_image/: icosahedron.blend  tangent_image.blend  tangent_image.xcf  tangent_image_6.xcf
doc/paper_draft/images/wraparound/: bunny.blend  src2tar.xcf  warparound3d.blend
doc/paper_draft/sections/: 1-introduction.tex  2-relatedworks.tex  3-approach.tex  4-result.tex  5-discussion.tex  supplementary.tex
doc/paper_draft_arXiv/: 360flow.bib  360flow.tex  bmvc_review.tex
doc/paper_draft_arXiv/sections/: 1-introduction.tex  2-relatedworks.tex  3-approach.tex  4-result.tex  5-discussion.tex  appendix.tex
doc/tech_detail/: optical_flow_evaluation.md  readme.md
